third_party/move/move-compiler-v2/tests/more-v1/parser/match_neg_bytestring.move
module 0xc0ffee::m {
    fun neg_bytes(x: vector<u8>): vector<u8> {
        match (x) {
            -b"hello" => b"bye",
            _ => b"",
        }
    }
}
